# argos3-deepracer

./: .gitignore  README.md
apptainer/def/: argos_real_robot_base.def  aws_deepracer_packages_layer.def  ros_foxy_layer.def
scripts/: start_ros.launch.py
src/: CMakeLists.txt
src/cmake/: ARGoSBuildOptions.cmake  ARGoSPackaging.cmake
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/deepracer/: CMakeLists.txt
src/plugins/robots/deepracer/control_interface/: ci_ackermann_steering_actuator.cpp  ci_ackermann_steering_actuator.h  ci_deepracer_accelerometer_sensor.cpp  ci_deepracer_accelerometer_sensor.h  ci_deepracer_ackermann_steering_actuator.cpp  ci_deepracer_ackermann_steering_actuator.h  ci_deepracer_camera_sensor.cpp  ci_deepracer_camera_sensor.h  ci_deepracer_gyroscope_sensor.cpp  ci_deepracer_gyroscope_sensor.h  ci_deepracer_imu_sensor.cpp  ci_deepracer_imu_sensor.h  ci_deepracer_lidar_sensor.cpp  ci_deepracer_lidar_sensor.h  ci_real_deepracer_camera_sensor.cpp  ci_real_deepracer_camera_sensor.h
src/plugins/robots/deepracer/real_robot/: main.cpp  real_deepracer.cpp  real_deepracer.h  real_deepracer_ackermann_steering_actuator.cpp  real_deepracer_ackermann_steering_actuator.h  real_deepracer_ackermann_steering_device.cpp  real_deepracer_ackermann_steering_device.h  real_deepracer_camera_sensor.cpp  real_deepracer_camera_sensor.h  real_deepracer_device.cpp  real_deepracer_device.h  real_deepracer_differential_steering_actuator.cpp  real_deepracer_differential_steering_actuator.h  real_deepracer_differential_steering_device.h  real_deepracer_encoder_sensor.cpp  real_deepracer_encoder_sensor.h  real_deepracer_imu_sensor.cpp  real_deepracer_imu_sensor.h  real_deepracer_lidar_sensor.cpp  real_deepracer_lidar_sensor.h
src/plugins/robots/deepracer/simulator/: ackermann_steering_default_actuator.cpp  ackermann_steering_default_actuator.h  ackermann_wheeled_entity.cpp  ackermann_wheeled_entity.h  deepracer_camera_default_sensor.cpp  deepracer_camera_default_sensor.h  deepracer_entity.cpp  deepracer_entity.h  deepracer_imu_default_sensor.cpp  deepracer_imu_default_sensor.h  deepracer_imu_rotzonly_sensor.cpp  deepracer_imu_rotzonly_sensor.h  deepracer_imu_sensor_equipped_entity.cpp  deepracer_imu_sensor_equipped_entity.h  deepracer_lidar_default.h  deepracer_lidar_default_sensor.cpp  deepracer_lidar_default_sensor.h  deepracer_measures.cpp  deepracer_measures.h  dynamics2d_ackermannsteering_control.cpp  dynamics2d_ackermannsteering_control.h  dynamics2d_ackermansteering_control.cpp  dynamics2d_ackermansteering_control.h  dynamics2d_deepracer_model.cpp  dynamics2d_deepracer_model.h  qtopengl_deepracer.cpp  qtopengl_deepracer.h
src/plugins/robots/deepracer/simulator/models/: deepracer.mtl
src/testing/: CMakeLists.txt  deepracer_camera.cpp  deepracer_camera.h  deepracer_diffusion.cpp  deepracer_diffusion.h  deepracer_drive_demo.cpp  deepracer_drive_demo.h  deepracer_hello_world.cpp  deepracer_hello_world.h  drive_demo.argos  hello_world_config.argos  hello_world_experiment.argos  testcamerasimulation.argos  testexperiment.argos
